V6.0.7
* Fixed compatibility issues with plugins adding new recepies. 
V6.0.6
* Fixed ticket 443 (https://github.com/Rocologo/MobHunting/issues/443)
* Rounding fixed
* Reward for PVP kills can max be the players balance, if rob_from_victim is enabled. If the killed player has 0 money, the reward will be zero to.
* Added a limit of gold per BagOfGold, default 10000 (Notice that you need to set the limit in both BagOfGold and MobHunting at the moment).
* Added a limit on how much gold the player can drop, give and take using /mh money .... the limit is 100 bags
V6.0.5
* Use org.Bukkit.SendTitle instead of using TitleManager and TitleAPI. 
* Use player.spawnParticle instead of using ProtocolLib 
* Fixed Ticked 432. ${prize} not working when creating a bount on a player.
* Fixed ticket 437. Stacked heads sold with BagOfGOld sign was counted as one head.
* Fixed Ticket 433. Creating new leaderboard, sign had a wrong direction (https://github.com/Rocologo/MobHunting/issues/433)
V6.0.4
* Support for SpigotMC 1.13.1 added
* "MobHunting Reward" Lore added to MobHunting Rewards
* Fixed SQL error in MySQL/ mh_Bounties (Removed CONTRAINT's)
* Fixed Ticket 409 (https://github.com/Rocologo/MobHunting/issues/409)
* new bounties is broadcasted to all online players
V6.0.3
* Removed hard dependency for WorldEdit
* Added possibility to disable integration to WorldEdit in config.yml
* Temporary fix for players being disconneted if grinding is detected. ProtocolLib was using to mark the area / circle with small flames, but this does not work at the moment. The feature is disabled in config.yml. (protocollib.show_grinding_area_using_protocollib_temp: false)  
V6.0.2
* Default message_type values added. You can now decide where the "kill message","Money message" and "Head message" will be displayed. Possible Values are: Chat, ActionBar, BassBar, Title, Subtitle or None. None if you dont want any message.