@@ -54,6 +54,7 @@ bonus.coverblown.name= 揭穿!
 bonus.crackshot.name=神枪手
 bonus.critical.name=临界！
 bonus.difficulty.name=困难
+bonus.world.name=World
 bonus.factionwarzone.name=战区
 bonus.friendlyfire.name=误伤
 bonus.happyhour.name=快乐时间
